Added: card view layout added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".cardViewSubject"></activity>
+        <activity android:name=".cardviewLecture"></activity>
+        <activity android:name=".cardViewSubject" />
         <activity android:name=".cardviewHone" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".SignUpActivity" />
