--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".cardviewDiscussion"></activity>
+        <activity android:name=".Profile"></activity>
         <activity android:name=".cardviewChapter" />
         <activity android:name=".Announcement" />
         <activity android:name=".Notification" />
